# rose_hardware_interface

rose_hardware_comm/: CMakeLists.txt  package.xml
rose_hardware_comm/include/rose_hardware_comm/: hardware_comm.hpp  serial.hpp
rose_hardware_comm/src/: serial.cpp
rose_hardware_comm/src/hardware_comm/: hardware_comm.cpp
rose_hardware_comm/src/serial/: serial.cpp
rose_hardware_controller/: CMakeLists.txt  package.xml
rose_hardware_controller/include/rose_hardware_controller/: controller_command.hpp  controller_data.hpp  controller_response.hpp  hardware_controller.hpp  hardware_timer.hpp
rose_hardware_controller/src/: controller_command.cpp  controller_data.cpp  controller_response.cpp  hardware_controller.cpp  hardware_timer.cpp
