<?xml version="1.0"?>
<package>
  <name>rose_hardware_comm</name>
  <version>0.0.0</version>
  <description>The Rose 2.0 hardware communitaction library package package</description>
  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscomm</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_utils</build_depend>

  <run_depend>roscomm</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_utils</run_depend>

  <export>
  </export>
</package>