<?xml version="1.0"?>
<package>
  <name>rose21_platform_controller</name>
  <version>0.0.0</version>
  <description>The rose21 platform controller</description>

  <maintainer email="ohendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>server_multiple_client</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>server_multiple_client</run_depend>

  <export>
  </export>
</package>