<?xml version="1.0"?>
<package>
  <name>rose21_platform_controller</name>
  <version>0.0.0</version>
  <description>The rose21 platform controller</description>

  <maintainer email="ohendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_conversions</build_depend>
  <build_depend>rose_hardware_comm</build_depend>
  <build_depend>rose_hardware_controller</build_depend>
  <build_depend>rose_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_conversions</run_depend>
  <run_depend>rose_hardware_comm</run_depend>
  <run_depend>rose_hardware_controller</run_depend>
  <run_depend>rose_utils</run_depend>

  <export>
  </export>
</package>